--- a/ventanaPrincipal.fxml
+++ b/ventanaPrincipal.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <TextField alignment="CENTER" text="Tarea Aspectos" BorderPane.alignment="CENTER">
          <font>
@@ -18,7 +18,7 @@
    <center>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Color Amarillo">
+            <Button mnemonicParsing="false" style="-fx-background-color: #FFC300;" text="Color Amarillo">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
@@ -26,7 +26,7 @@
                   <Font size="17.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" text="Color Azul">
+            <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="129.0" style="-fx-background-color: #3377FF;" text="Color Azul">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
@@ -34,7 +34,7 @@
                   <Font size="17.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" text="Color Rojo">
+            <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="131.0" style="-fx-background-color: #FF4933;" text="Color Rojo">
                <font>
                   <Font size="17.0" />
                </font>
@@ -42,7 +42,7 @@
                   <Insets bottom="20.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Salir">
+            <Button mnemonicParsing="false" opacity="0.67" text="Salir">
                <font>
                   <Font size="17.0" />
                </font>
